# Dengue_Outbreak_Predictor

./: .gitignore  README.md  pyproject.toml  report_draft.md  requirements.txt
.streamlit/: config.toml
app/: app.py
data/processed/: integrated_data.csv
models/: model.pkl  preprocessor.pkl  top_features.json
reports/: accuracy.txt
src/data/: generate_plots.py  preprocess.py
src/models/: predict.py  train.py
src/utils/: helpers.py
